--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,13 +2,13 @@
   [[steps]]
     name = "Build Angular"
     builder = "node"
-    dir = "project-todo-app/project-todo-app"
+    dir = "project-todo-app"  # Assuming this is where your Angular project is located
     cmd = "npm install && npm run build"
-  
+
   [[steps]]
     name = "Build Spring Boot"
     builder = "java"
-    dir = "project-todo-app/Project-Management"
+    dir = "Project-Management"  # Assuming this is where your Spring Boot project is located
     cmd = "mvn clean package -DskipTests"
     [steps.env]
       MAVEN_OPTS = "-Dmaven.repo.local=/opt/maven"
@@ -16,8 +16,8 @@
 [start]
   [[steps]]
     name = "Start Spring Boot"
-    cmd = "java -jar project-todo-app/Project-Management/target/*.jar"
-  
+    cmd = "java -jar Project-Management/target/*.jar"
+
   [[steps]]
     name = "Serve Angular"
-    cmd = "npx http-server project-todo-app/project-todo-app/dist"
+    cmd = "npx http-server project-todo-app/dist"  # Adjust this command based on your Angular project setup
