--- a/Project-Management/src/main/resources/application.properties
+++ b/Project-Management/src/main/resources/application.properties
@@ -10,6 +10,5 @@ server.port=8082
 jwt.expirationMs=3600000
 
 github.api.url=https://api.github.com/gists
-github.token=YOUR_GITHUB_TOKEN
+github.token=YOUR GITHUB TOKEN
 
-spring.profiles.active=dev
